[gd_scene load_steps=8 format=3 uid="uid://dh480ncn8yp0u"]

[ext_resource type="Texture2D" uid="uid://ddl0ortqxh42o" path="res://Scenes/Bosses/BossOne/bossbaby.png" id="1_07ba8"]
[ext_resource type="Script" path="res://Scenes/Bosses/BossOne/boss_one.gd" id="1_31cnk"]
[ext_resource type="PackedScene" uid="uid://nnk08mss8qiq" path="res://Scenes/Bosses/BossWeapons/boss_bullet.tscn" id="2_5f17w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h77b1"]
size = Vector2(435, 516.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_whix4"]
size = Vector2(313, 400)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dl3hb"]
bg_color = Color(0, 0, 0, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_67rco"]
bg_color = Color(1, 0.254902, 0.176471, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="BossOne" type="Node2D" node_paths=PackedStringArray("Sprite", "Hurtbox", "HurtboxCollider", "Hitbox", "HitboxCollider", "HealthBar")]
script = ExtResource("1_31cnk")
Sprite = NodePath("Sprite2D")
Hurtbox = NodePath("Hurtbox")
HurtboxCollider = NodePath("Hurtbox/HurtboxCollider")
Hitbox = NodePath("Hitbox")
HitboxCollider = NodePath("Hitbox/HitboxCollider")
HealthBar = NodePath("HealthBar")
HEALTH = 100
MONEY_VALUE = 300
WEAPON_LIST = Array[PackedScene]([ExtResource("2_5f17w")])
ATTACK_COOLDOWN_1 = 2.0
ATTACK_COOLDOWN_2 = 2.0
ATTACK_COOLDOWN_3 = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_07ba8")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="HurtboxCollider" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_h77b1")
debug_color = Color(0.996078, 0, 0, 0.419608)

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxCollider" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_whix4")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -200.0
offset_top = -343.0
offset_right = 187.0
offset_bottom = -291.0
theme_override_styles/background = SubResource("StyleBoxFlat_dl3hb")
theme_override_styles/fill = SubResource("StyleBoxFlat_67rco")
step = 1.0
value = 100.0
show_percentage = false

[node name="AttackCooldown_1" type="Timer" parent="."]

[node name="AttackCooldown_2" type="Timer" parent="."]

[node name="AttackCooldown_3" type="Timer" parent="."]

[node name="ProjectileOrigin" type="Marker2D" parent="."]
scale = Vector2(0.998546, 1)

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="AttackCooldown_1" to="." method="_on_attack_cooldown_1_timeout"]
[connection signal="timeout" from="AttackCooldown_2" to="." method="_on_attack_cooldown_2_timeout"]
[connection signal="timeout" from="AttackCooldown_3" to="." method="_on_attack_cooldown_3_timeout"]
